# disease-spread-simulator

./: .gitignore  CMakeLists.txt  README.md  covid-19-colombia-all.csv  covid-19-colombia-deaths.csv  data_upd.cpp  dijkstra.h  graph  graph.cpp  graph.h  main  main.cpp  model.cpp  model.h  network_gen.cpp  network_gen.h  results
data/: covid-19-colombia-deaths.csv
resultados/:  results  cadena_contagio.csv  grafo_aristas.csv  grafo_centralidades.csv  grafo_componentes.csv  grafo_grados.csv  grafo_nodos.csv  sir_Aleatoria (ER).csv  sir_Scale-Free (BA).csv  sir_Small-World (WS).csv  sir_hubs.csv  sir_ninguna.csv  sir_rastreo_bfs.csv  sir_vacunacion.csv
src/: data_upd.cpp  data_upd.h  dijkstra.cpp  graph.cpp  graph.h  main.cpp  model.cpp  network_gen.h
